assets/styles/style.css
body {
    font-family: 'Muli', sans-serif !important;
}

.black-text {
    color: #313131 !important;
}

.faint-gray-text {
    color: #f5f5f5 !important;
}

.gray-text {
    color: #b9b9b9 !important;
}

.black-bg {
    background-color: black !important;
}

.bg-faint-gray {
    background-color: #F0F0F0 !important;
}

.bg-gray {
    background-color: #b9b9b9 !important;
}

.font-12 {
    font-size: 12px;
}

.font-14 {
    font-size: 14px;
}

.font-18 {
    font-size: 18px;
}

.font-24 {
    font-size: 24px;
}

.font-40 {
    font-size: 40px;
}

@media only screen and (max-width: 767px){

}

@media only screen and (max-width: 1023px){
    #content {
        height: 862px;
    }

    #main-shoe {
        height: 862px;
    }

    #feature-text {
        height: 200px;
        position: absolute;
        right: 0;
        bottom: 0;
    }
}

@media only screen and (min-width: 1024px){
    #content {
        height: 100vh;
    }

    #content > div:nth-child(1) {
        height: 100vh;
    }

    header > nav {
        height: 50vh;
    }

    #social-links {
        height: 50vh;
    }

    footer > div {
        height: 33vh;
    }

    #cart-items {
        width: 30px;
        height: 30px;
        background-color: black;
        color: white;
        border-radius: 100%;
        font-weight: bold;
        padding-top: 2px;
        margin-right: -5px;
    }

    #date {
        white-space: nowrap;
    }

    .bar-20 {
        width: 20px;
        border-bottom: 2px solid black;
    }

    .bar-10 {
        width: 10px;
        border-bottom: 2px solid black;
    }

    #scroll-text {
        transform: rotate(90deg);
        white-space: nowrap;
    }

    #feature-text p {
        font-size: 24px;
    }

    #main-shoe {
        height: 100vh;
        background-image: url("../images/13.jpeg");
        background-position: center;
        background-repeat: no-repeat;
        background-size: cover;
    }

    #feature-text{
        height: 50vh;
    }

    #feature-shoe {
        background-image: url("../images/1.jpg");
        background-position: center;
        background-repeat: no-repeat;
        background-size: cover;
        margin-left: 10px;
        height: 50vh;
    }
}

